--- a/src/App.css
+++ b/src/App.css
@@ -1,129 +1,154 @@
-.homePageWrapper{
-height: 100vh;
-display : flex;
-align-items: center;
-justify-content: center;
-color: #fff;
-height: 100vh;
+.homePageWrapper {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  height: 100vh;
 }
-.formWrapper{
+
+.formWrapper {
   background: #282a36;
-  padding : 20px;
-  border-radius: 10px ;
+  padding: 20px;
+  border-radius: 10px;
   width: 400px;
-  max-width:90%;
-   /*  for responsiveness */
+  max-width: 90%;
+  /*  for responsiveness */
 }
+
 footer {
-  position:fixed ;
+  position: fixed;
   bottom: 0;
 }
-footer a{
-  color:#4aee88;
+
+footer a {
+  color: #4aee88;
 
 }
-.inputGroup{
-  display:flex;
-  flex-direction: column; 
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
 
 }
-.mainLabel{
+
+.mainLabel {
   margin-bottom: 20 px;
   margin-top: 0;
 }
-.homePageLogo{
-  height : 60 px;
+
+.homePageLogo {
+  height: 60 px;
   margin-bottom: 30px;
 }
-.inputbox{
-  padding:10px;
-  border-radius:5px ;
-  outline:none;
-  border:none;
+
+.inputbox {
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
   margin-bottom: 14px;
   background: #eee;
   font-size: 16px;
   font-weight: bold;
 }
-.btn{
-  border:none;
-  padding :10px;
+
+.btn {
+  border: none;
+  padding: 10px;
   border-radius: 5px;
   font-size: 16px;
   font-weight: bold;
-cursor: pointer;
-transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
-.joinbtn,.leaveBtn{
+
+.joinbtn,
+.leaveBtn {
   background: #4aed88;
-  width : 100px;
-  margin-left:auto;
-   /* for moving btn to the right */
+  width: 100px;
+  margin-left: auto;
+  /* for moving btn to the right */
 }
-.joinbtn:hover ,.leaveBtn:hover{
+
+.joinbtn:hover,
+.leaveBtn:hover {
   background: #2b824c;
   /* change colour of button when cursor point it out */
 }
-.createInfo{
-  margin : 0 auto;
-  margin-top:20px;
+
+.createInfo {
+  margin: 0 auto;
+  margin-top: 20px;
 }
-.createNewBtn{
-  color :#4aed88;
+
+.createNewBtn {
+  color: #4aed88;
   text-decoration: none;
   border-bottom: 1px solid #4aed88;
   transition: all 0.3s ease-in-out;
 }
-.createNewBtn:hover, footer a{
-  color :#1c6538;
+
+.createNewBtn:hover,
+footer a {
+  color: #1c6538;
   border-color: #1c6538;
 }
 
-.mainWrap{
-  display : grid;
+.mainWrap {
+  display: grid;
   grid-template-columns: 230px 1fr;
-  
+
 }
-.aside{
-  background:#1c1e29 ;
-  padding:16px;
-  color:#fff;
-  display:flex;
+
+.aside {
+  background: #1c1e29;
+  padding: 16px;
+  color: #fff;
+  display: flex;
   flex-direction: column;
 }
-.asideInner{
-flex:1;
+
+.asideInner {
+  flex: 1;
 }
-.clientsList{
+
+.clientsList {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap:20px;
+  gap: 20px;
 }
-.client{
+
+.client {
   display: flex;
   align-items: center;
   flex-direction: column;
-  font-weight:bold ;
+  font-weight: bold;
 }
-.userName{
-margin-top: 10px;
+
+.userName {
+  margin-top: 10px;
 }
-.Logo{
+
+.Logo {
   border-bottom: 1px solid #424242;
-  padding-bottom: 10px ;
+  padding-bottom: 10px;
 }
-.LogoImage{
+
+.LogoImage {
   height: 60px;
 }
-.leaveBtn{
+
+.leaveBtn {
   margin-top: 20px;
-width:100%;
+  width: 100%;
 }
+
 .CodeMirror {
-min-height: calc(100vh-20px);
-font-size:20px;
-line-height:1.6;
-padding-top:20px ;
+  min-height: calc(100vh-20px);
+  font-size: 20px;
+  line-height: 1.6;
+  padding-top: 20px;
 
 }
