Updates for scroll error and flicker

--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,6 @@ footer a {
 
 .createNewBtn:hover,
 footer a:hover {
-  display: grid;
-  grid-template-columns: 230px 1fr;
   color: #1c6538;
   border-color: #1c6538;
 }
@@ -100,7 +98,7 @@ footer a:hover {
 .mainWrap {
   display: grid;
   grid-template-columns: 230px 1fr;
-  height : 100vh;
+  height: 100vh;
 
 }
 
@@ -152,6 +150,20 @@ footer a:hover {
   min-height: calc(100vh);
   font-size: 20px;
   line-height: 1.6;
-  padding-top: 20px;
 
 }
+
+@media screen and (max-width:720px) {
+  .mainWrap{
+    display: grid;
+    /* grid-template-columns: 230px 1fr; */
+    grid-template-columns: none;
+    height: 100vh;
+    /* grid-template-rows: 354px 1fr; */
+    /* display: block; */
+    overflow-y: hidden;
+}
+.editorWrap{
+  overflow-y: auto;
+}
+  }
